com.cts.sample.rest.products.application/target/classes/META-INF/fabric8/openshift/tibco-sample-rest-service-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    container: tibco-sample-rest
    provider: fabric8
    project: tibco-sample-rest
    group: com.tibco.bw
    expose: "true"
    app: com.cts.sample.rest.products.application
    version: 1.0.0-SNAPSHOT
  name: tibco-sample-rest-service
  namespace: tibcorest
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    container: tibco-sample-rest
    provider: fabric8
    project: tibco-sample-rest
    group: com.tibco.bw
    app: com.cts.sample.rest.products.application
  type: LoadBalancer
