com.cts.sample.rest.products.application/target/classes/META-INF/fabric8/openshift/tibco-sample-rest-service-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    container: tibco-sample-rest
    provider: fabric8
    project: tibco-sample-rest
    group: com.tibco.bw
    expose: "true"
    app: com.cts.sample.rest.products.application
    version: 1.0.0-SNAPSHOT
  name: tibco-sample-rest-service
  namespace: tibcorest
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: tibco-sample-rest-service
